Fixed issue on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,12 +35,12 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
-  background-color: #777;
+  background-color: #343a40;
   
 }
 .carousel-item > img {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   min-width: 100%;
 }
